--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,11 @@
+body {
+  min-height: 100vh;
+}
+
 .App {
-  text-align: left;
+  background-image: url(./images/abigail-keenan-8-s5QuUBtyM-unsplash.png);
+}
+
+.landing-page {
+  height: 100%;
 }
