--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,85 @@
-.landing-page {
-  background-image: url(./images/abigail-keenan-8-s5QuUBtyM-unsplash.png);
+.landing-page-container {
+  /* background-image: url(./images/abigail-keenan-8-s5QuUBtyM-unsplash.png); */
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
   padding: 5em 2em;
+  height: 100vh;
+  background-image: linear-gradient(
+    to top,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  );
+}
+
+.login-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.login-form-1 {
+  padding: 5%;
+  background: white;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form-1 h3 {
+  text-align: center;
+  color: #333;
+}
+.login-form-2 {
+  padding: 5%;
+  background: black;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+.login-form-2 h3 {
+  text-align: center;
+  color: #fff;
+}
+.login-container form {
+  padding: 10%;
+}
+.btnSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  border: none;
+  cursor: pointer;
+}
+.login-form-1 .btnSubmit {
+  font-weight: 600;
+  color: #fff;
+  background-color: rgb(204, 66, 66);
+}
+.login-form-2 .btnSubmit {
+  font-weight: 600;
+  color: white;
+  background-color: rgb(204, 66, 66);
+}
+.login-form-2 .ForgetPwd {
+  color: #fff;
+  font-weight: 600;
+  text-decoration: none;
+}
+.login-form-1 .ForgetPwd {
+  color: #0062cc;
+  font-weight: 600;
+  text-decoration: none;
 }
 
 @media only screen and (min-width: 480px) {
-  .landing-page {
+  .landing-page-container {
     min-height: 400px;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .landing-page {
+  .landing-page-container {
     min-height: 500px;
   }
 }
 
 @media only screen and (min-width: 1280px) {
-  .landing-page {
+  .landing-page-container {
     min-height: 600px;
   }
 }
