--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,31 @@
-.landing-page-container {
+html {
+  height: 100%;
+}
+body {
+  /* min-height: 100%;
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 9em 6em;
-  height: auto;
   background-image: linear-gradient(
     to top,
     #c4c5c7 0%,
     #dcdddf 52%,
     #ebebeb 100%
-  );
+  ); */
+}
+
+.landing-page-container {
+  padding: 3em 2em;
+  /* height: 100vh;
+  background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
+    to top,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  ); */
 }
 
 .login-container {
@@ -49,24 +65,26 @@
 }
 
 .home-page-container {
+  /* background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: linear-gradient(
     to top,
     #c4c5c7 0%,
     #dcdddf 52%,
     #ebebeb 100%
-  );
-
-  height: auto;
+  ); */
 }
 .saved-page-container {
+  /* background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: linear-gradient(
     to top,
     #c4c5c7 0%,
     #dcdddf 52%,
     #ebebeb 100%
-  );
-
-  height: 100vh;
+  ); */
 }
 
 .card-container {
@@ -82,18 +100,12 @@
 
 @media only screen and (min-width: 480px) {
   .landing-page-container {
-    min-height: 400px;
+    padding: 4em 3em;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .landing-page-container {
-    min-height: 500px;
-  }
-}
-
-@media only screen and (min-width: 1280px) {
-  .landing-page-container {
-    min-height: 600px;
+    padding: 6em 5em;
   }
 }
